📝 chore: add .eslintignore, .eslintrc, .gitignore, and update package.json scripts The .eslintignore file is added to ignore certain directories from being linted. The .eslintrc file is added to configure the eslint rules and settings. The .gitignore file is added to ignore certain files and directories from being tracked by git. The package.json scripts are updated to include new scripts for building, linting, testing, and releasing the application. These changes improve the development workflow and ensure code quality.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     }
   },
   "scripts": {
-    "test": "echo \"Happy hacking\" && 💙"
+    "build": "buildkarium",
+    "dev": "vitest",
+    "lint": "eslint --ext .ts .",
+    "play": "dynot test/fixture/app",
+    "release": "nyxr test && nyxr build && nyxlx changelogen@latest --release && pnpm publish && git push --follow-tags",
+    "test": "nyxr lint && vitest run --coverage"
   },
   "dependencies": {
     "clipboardy": "^3.0.0",
